chp5/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service      
subsets:
  - addresses:
    - ip: 11.11.11.11         
    - ip: 22.22.22.22         
    ports:
    - port: 80                

# The Endpoints object needs to have the same name as the service and contain the list of target IP addresses and ports for the service.
