chp5/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName                         
  externalName: google.com
  clusterIP: ""
  ports:
  - port: 80
