chp5/kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None               
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia

# difference between clusterIP and None is that when you `nslookup`, this returns all pods' IPs
# whereas, clusterIP service returns a single IP of the service

# kubectl run dnsutils --image=tutum/dnsutils --generator=run-pod/v1 --command -- sleep infinity
# kubectl exec dnsutils nslookup kubia-headless
# kubectl exec dnsutils nslookup kubia
