chp5/kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:                            
  - hosts:                        
    - kubia.example.com           
    secretName: tls-secret        
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80


# create tls certificates first
# $ openssl genrsa -out tls.key 2048
# $ openssl req -new -x509 -key tls.key -out tls.cert -days 360 -subj /CN=kubia.example.com

# you must first create a secret 'lts-secret' first
# kubectl create secret tls tls-secret --cert=tls.cert --key=tls.key
# curl -k -v https://kubia.example.com/kubia
